Fix z-index issue

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -46,7 +46,8 @@
     -ms-transition: all @transitionTime ease;
     -o-transition: all @transitionTime ease;
     transition: all @transitionTime ease;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: -1;
 }
 
 #root:not(.sidebar-collapsed) #overlay{
@@ -180,6 +181,14 @@ header.navbar.exploded {
             }
         }
     }
+}
+
+// Class for removing the shadow from the header if the user it at the top of the page
+#root.top header.navbar:not(.header-exploded) {
+    -webkit-box-shadow: 0 5px 12px rgba(0, 0, 0, 0);
+    -moz-box-shadow:    0 5px 12px rgba(0, 0, 0, 0);
+    box-shadow:         0 5px 12px rgba(0, 0, 0, 0);
+    border-bottom: 1px solid @accent1;
 }
 
 // Sidebar
