--- a/src/less/type.less
+++ b/src/less/type.less
@@ -1,9 +1,9 @@
 @import './variables';
 
-@font-heading-color: @mainFontColor;
-@font-body-color: lighten(@mainFontColor, 10%);
+@font-heading-color: lighten(@mainFontColor, 10%);
+@font-body-color: lighten(@mainFontColor, 15%);
 
-@font-size-base:          17px;
+@font-size-base:          15px;
 @font-size-large:         ceil((@font-size-base * 1.1));
 @font-size-small:         ceil((@font-size-base * 0.85));
 
